# multi-ContractAgent

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt  test_llm_connection.py  verify_refinement.py
.trae/documents/: fix_agent_text_search_tool.md  fix_toolnode_binding_issue.md
.trae/rules/: environment.md  language.md
.trae/specs/create-debug-script/: checklist.md  spec.md  (+1 more)
data/input/: XT.xlsx  contract.docx  dummy.docx  dummy_contract.docx  test_single_contract.docx  甘露机岛合同-20181211版最终-签字版（无价格版）.docx
data/output/: extraction_results.csv  result.csv  result_live.csv
src/agents/: nodes.py
src/core/: archivist.py  formatter.py  llm.py  retriever.py  schema.py  state.py  subgraph.py  task_init.py  workflow.py
src/prompts/: lookup_report.txt  lookup_rerank.txt  lookup_summary.txt  short_title.txt  summary.txt  supervisor.txt  validator.txt  worker.txt
src/tools/: lookup.py
src/utils/: dummy_gen.py
tests/: debug_doc_structure.py  debug_retriever.py  full_process_debug_test.py  gen_scenarios.py  inspect_numbering.py  live_model_test.py  manual_test_supervisor_prompt.py  test_archivist.py  test_archivist_structure.py  test_enhanced_archivist.py  test_enhanced_tools.py  test_formatter.py  test_full_scenarios.py  test_nodes_dynamic.py  test_parallel_workflow.py  test_prompts.py  test_regex_refinement.py  test_reranking.py  test_retriever.py  test_retriever_filtering.py  test_single_flow.py  test_subgraph.py  test_supervisor_trimming.py  test_task_init.py  test_tools.py  test_validator_feedback.py  test_worker_and_tools.py  test_workflow.py
(+58 files in other folders)
